Remove some code smells.